ui_tests/fn_calls_5.box
fn foo() {}
fn more_func(a: Extra) {}

type Extra {}

fn bar() {
    foo(new Extra {});
    more_func();
}

